--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
     "nexmo": "^2.5.1",
+    "nodemailer": "^6.3.1",
     "sendgrid": "^5.2.3",
     "swig": "^1.4.2"
   }
