--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nexmo": "^2.5.1",
     "nodemailer": "^6.3.1",
     "sendgrid": "^5.2.3",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "validator": "^12.1.0"
   }
 }
